--- a/style.css
+++ b/style.css
@@ -3,3 +3,144 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background: #1F1517;
+  color: #FFF;
+}
+
+html {
+  font-family: Inter;
+  font-weight: 500;
+}
+
+a {
+  text-decoration: none;
+  
+ 
+}
+
+ul {
+  list-style: none;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  max-width: 1120px;
+  padding: 1.5rem 10rem;
+
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo{
+  font-family: Teko;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  color: rgba(255, 242, 231, 0.50);
+}
+
+.github {
+  color: #FFF2E7;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: normal;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content{
+  background: #181012;
+  
+}
+
+.hero {
+  max-width: 1120px;
+  height: 60vh;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: space-between;
+  gap: 6rem;
+  
+
+  padding: 0rem 2rem;
+  overflow: clip;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.destaque {
+  font-family: Epilogue;
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.marrom {
+  color: #A45A49;
+}
+
+h1 {
+  color: #FFF;
+  font-family: Montserrat, sans-serif;
+  font-size: 3.5rem;
+  font-weight: 800;
+  line-height: 120%; /* 67.2px */
+}
+
+hr {
+  border-color: #A45A49;
+  width: 240px;
+  height: 2px;
+}
+
+.hero-subtitle{
+  color: #C7BAB3;
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 156%;
+}
+
+.hero-images{
+  max-width: 45%;
+  column-count: 4;
+  column-gap: 1rem;
+  margin: -1rem;
+}
+
+.hero-images > figure > img {
+  width: 100%;
+  border-radius: 0.5rem;
+}
+
+button-container{
+  width: 100%;
+  max-width: 1120px;
+  margin: auto;
+  transform: translate("0, -50%");
+}
+
+button {
+  padding: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  background: #A45A49;
+}
