--- a/style.css
+++ b/style.css
@@ -97,6 +97,11 @@ main {
   color: #A45A49;
 }
 
+.yellow{
+  color: #E7A80E;
+  
+}
+
 h1 {
   color: #FFF;
   font-family: Montserrat, sans-serif;
@@ -143,4 +148,138 @@ button {
   border: none;
   border-radius: 0.5rem;
   background: #A45A49;
+}
+
+.receitas{
+  display: flex;
+  flex-direction: column;
+  max-width: 1120px;
+  padding: 3rem 2rem;
+  margin: auto;
+  
+}
+
+.receitas-header{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.receitas-title{
+  color: #FFF2E7;
+  font-family: Montserrat;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.receitas-subtitle{
+  color: #C7BAB3;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 148%;
+}
+
+.receitas-card-container{
+  padding: 0rem 10rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.receitas-card{
+  background: #241A1C;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  flex-basis: 29rem;
+  margin-top: 2rem;
+}
+
+.receitas-card-header{
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+
+.receitas-card-header-details{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.receita-title{
+  color: #FFF2E7;
+  font-family: Montserrat;
+  font-size: 1.5rem;
+
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: -0.4px;
+}
+
+.receita-avaliação{
+  color: #756A67;
+  font-family: Inter;
+  font-size: 1rem;
+
+  font-weight: 500;
+  line-height: 132%; 
+}
+
+.receitas-descricao{
+  color: #C7BAB3;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 140%;
+}
+
+.receita-author{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.receita-autor-nome{
+  color: #C7BAB3;
+  font-family: Inter;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 120%;
+}
+
+.receita-author > img{
+  border-radius: 20rem;
+  width: 1.5rem;
+}
+
+footer{
+  background: #23181A;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  padding: 4rem;
+  gap: 0.625rem;
+}
+
+.footer-copy{
+  color: #FFF2E7;
+  font-family: Inter;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.footer-autor{
+  color: rgba(255, 242, 231, 0.50);
+
+font-family: Inter;
+font-size: 0.875rem;
 }
